# calculator-package

./: README.md  pyproject.toml  setup.py  teacher_requirements.txt  tox.ini
.github/workflows/: tests.yaml
calculator/: __init__.py  calculator.py
calculator/teacher/: teacher.py
tests/: test_calculator.py  test_teacher.py
